logs/example.rtsubsites-theme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/browser'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/browser/images'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/browser/javascripts'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/browser/stylesheets'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/profiles'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/profiles/default'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/profiles/uninstall'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/skins'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/skins/example_rtsubsites_theme_custom_images'...
Listing './lib/python3.5/site-packages/example/rtsubsites_theme/skins/example_rtsubsites_theme_custom_templates'...
Listing './lib/python3.5/site-packages/example.rtsubsites_theme-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redturtle'...
Listing './lib/python3.5/site-packages/redturtle/subsites'...
Listing './lib/python3.5/site-packages/redturtle/subsites/adapter'...
Listing './lib/python3.5/site-packages/redturtle/subsites/backend'...
Listing './lib/python3.5/site-packages/redturtle/subsites/frontend'...
Listing './lib/python3.5/site-packages/redturtle/subsites/frontend/browser'...
Compiling './lib/python3.5/site-packages/redturtle/subsites/frontend/browser/styles.py'...
***   File "./lib/python3.5/site-packages/redturtle/subsites/frontend/browser/styles.py", line 56
    raise ValueError, "Unkown rendering method '%s' for style '%s'" % (rendering, style.getId())
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redturtle/subsites/frontend/viewlets'...
Listing './lib/python3.5/site-packages/redturtle/subsites/locales'...
Listing './lib/python3.5/site-packages/redturtle/subsites/locales/it'...
Listing './lib/python3.5/site-packages/redturtle/subsites/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/redturtle.subsites-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
